Runtime Service simple start

--- a/settings.gradle
+++ b/settings.gradle
@@ -3,3 +3,5 @@ rootProject.name = 'CamundaEdu'
 include 'CamundaBootstrapping'
 include 'CamundaServices'
 include 'CamundaServices:RepositoryService'
+include 'CamundaServices:RuntimeService'
+include 'CamundaServices:IdentityService'
