Identity Service: basic main

--- a/settings.gradle
+++ b/settings.gradle
@@ -5,3 +5,4 @@ include 'CamundaServices'
 include 'CamundaServices:RepositoryService'
 include 'CamundaServices:RuntimeService'
 include 'CamundaServices:IdentityService'
+include 'CamundaServices:AuthorizationService'
