Task Service: basic main

--- a/settings.gradle
+++ b/settings.gradle
@@ -6,3 +6,4 @@ include 'CamundaServices:RepositoryService'
 include 'CamundaServices:RuntimeService'
 include 'CamundaServices:IdentityService'
 include 'CamundaServices:AuthorizationService'
+include 'CamundaServices:TaskService'
