History Service: basic main

--- a/settings.gradle
+++ b/settings.gradle
@@ -7,3 +7,4 @@ include 'CamundaServices:RuntimeService'
 include 'CamundaServices:IdentityService'
 include 'CamundaServices:AuthorizationService'
 include 'CamundaServices:TaskService'
+include 'CamundaServices:HistoryService'
