Management Service: when we can get jobs

--- a/settings.gradle
+++ b/settings.gradle
@@ -8,3 +8,4 @@ include 'CamundaServices:IdentityService'
 include 'CamundaServices:AuthorizationService'
 include 'CamundaServices:TaskService'
 include 'CamundaServices:HistoryService'
+include 'CamundaServices:ManagementService'
