External Service: simple external by Java Api

--- a/settings.gradle
+++ b/settings.gradle
@@ -9,3 +9,4 @@ include 'CamundaServices:AuthorizationService'
 include 'CamundaServices:TaskService'
 include 'CamundaServices:HistoryService'
 include 'CamundaServices:ManagementService'
+include 'CamundaServices:ExternalTaskService'
