Decision Service: decision simple

--- a/settings.gradle
+++ b/settings.gradle
@@ -10,3 +10,4 @@ include 'CamundaServices:TaskService'
 include 'CamundaServices:HistoryService'
 include 'CamundaServices:ManagementService'
 include 'CamundaServices:ExternalTaskService'
+include 'CamundaServices:DecisionService'
