Form Service: simple main form

--- a/settings.gradle
+++ b/settings.gradle
@@ -11,3 +11,4 @@ include 'CamundaServices:HistoryService'
 include 'CamundaServices:ManagementService'
 include 'CamundaServices:ExternalTaskService'
 include 'CamundaServices:DecisionService'
+include 'CamundaServices:FormService'
