Filter Service: simple filter

--- a/settings.gradle
+++ b/settings.gradle
@@ -12,3 +12,4 @@ include 'CamundaServices:ManagementService'
 include 'CamundaServices:ExternalTaskService'
 include 'CamundaServices:DecisionService'
 include 'CamundaServices:FormService'
+include 'CamundaServices:FilterService'
