--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,7 @@
 rootProject.name = 'CamundaEdu'
 
 include 'CamundaBootstrapping'
-include 'CamundaServices'
+
 include 'CamundaServices:RepositoryService'
 include 'CamundaServices:RuntimeService'
 include 'CamundaServices:IdentityService'
@@ -13,3 +13,15 @@ include 'CamundaServices:ExternalTaskService'
 include 'CamundaServices:DecisionService'
 include 'CamundaServices:FormService'
 include 'CamundaServices:FilterService'
+
+include 'CamundaVariables'
+include 'CamundaProcessInstance'
+include 'CamundaExternal'
+include 'CamundaConnector'
+include 'CamundaTransaction'
+
+include 'CamundaProcessApplications'
+
+include 'CamundaBpmn'
+
+include 'CamundaSpring'
