Process Modification: restart

--- a/settings.gradle
+++ b/settings.gradle
@@ -20,6 +20,8 @@ include 'CamundaExternal'
 include 'CamundaConnector'
 include 'CamundaTransaction'
 
+include 'CamundaBatch'
+
 include 'CamundaProcessApplications'
 
 include 'CamundaBpmn'
