--- a/settings.gradle
+++ b/settings.gradle
@@ -18,12 +18,14 @@ include 'CamundaVariables'
 include 'CamundaProcessInstance'
 include 'CamundaDelegate'
 include 'CamundaTransaction'
-include 'CamundaTimers'
+include 'CamundaIncidents'
+include 'CamundaErrorHandling'
 
 include 'CamundaBatch'
 
 include 'CamundaProcessApplications'
 
 include 'CamundaBpmn'
+include 'CamundaTimers'
 
 include 'CamundaSpring'
