--- a/settings.gradle
+++ b/settings.gradle
@@ -27,6 +27,7 @@ include 'CamundaBpmn:Tasks:ServiceTask'
 //include 'CamundaBpmn:Tasks:SendTask' like ServiceTask
 include 'CamundaBpmn:Tasks:UserTask'
 include 'CamundaBpmn:Tasks:ReceiveTask'
+include 'CamundaBpmn:Tasks:ManualTask'
 include 'CamundaTimers'
 
 include 'CamundaSpring'
